--- a/run.ipynb
+++ b/run.ipynb
@@ -6,16 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
-    "from bs4 import BeautifulSoup\n",
-    "import bs4\n",
-    "import pandas as pd\n",
-    "from utils import *\n",
-    "import os\n",
-    "import gradio as gr\n",
-    "from copy import deepcopy\n",
-    "import random\n",
-    "#lxml html5lib "
+    "from utils import *"
    ]
   },
   {
@@ -31,7 +22,101 @@
     "    df.save()\n",
     "    del companion, weeds, df\n",
     "\n",
-    "df = Plant_Table()\n"
+    "plant_table = Plant_Table()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "# find pages about mustard pests, tips, disease, companion plants, etc.\n",
+    "musatard_links = get_links(\"\\\"mustard\\\" tips, disease, companion plants\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "webpages = get_webpages(musatard_links)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "webpages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plant_table.df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipe = pipeline(\"text-generation\", model=\"TheBloke/dolphin-2.1-mistral-7B-GPTQ\", device=0, use_fast=True, revision=\"gptq-8bit-32g-actorder_True\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = template(system_message=\"Output the simplified names of plant database entries.\", search_results_message=\"Relevant names ['brassicacaeae', 'wild mustard']\", user_prompt=\"What is the simplified name for this entry?\")\n",
+    "count_of_tokens = len(pipe.tokenizer(test)['input_ids'])\n",
+    "tokens_available = (4096 - count_of_tokens - 1) // 4\n",
+    "answer_preformatted = [re.sub('<.*?>', '', i) for i in pipe(test, max_length=tokens_available)[0]['generated_text'].split('<|im_end|>')]\n",
+    "answer_preformatted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "extract_answer_text = template(\"Add brackets around the answer keyword \\{\\} and return {keyword} with brackets.\", answer_preformatted[1] + answer_preformatted[-1], \"What is the single keyword that includes the answer? (e.g. '\\{answer\\}}')\")\n",
+    "count_of_tokens = len(pipe.tokenizer(extract_answer_text)['input_ids'])\n",
+    "tokens_available = 4096 - count_of_tokens - 1\n",
+    "answer = [re.sub('<.*?>', '', i) for i in pipe(extract_answer_text, max_length=tokens_available)[0]['generated_text'].split('<|im_end|>')][-1].split('{')[1].split('}')[0].replace(\"\\\\\", \"\").strip()\n",
+    "# remove everything between any <>\n",
+    "answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bcvn"
    ]
   },
   {
@@ -41,10 +126,10 @@
    "outputs": [],
    "source": [
     "# gradio\n",
-    "example_plants = random.sample(df.get_plant_names(), len(df.get_plant_names()))\n",
+    "example_plants = random.sample(plant_table.get_plant_names(), len(plant_table.get_plant_names()))\n",
     "\n",
     "def get_compatible_plants(plant_name, strict='strictly_intercompatible'):\n",
-    "    compatible = df.get_compatible_groups(plant_name, strict=strict)\n",
+    "    compatible = plant_table.get_compatible_groups(plant_name, strict=strict)\n",
     "    if len(compatible) == 0:\n",
     "        return \"No compatible plants found.\"\n",
     "    else:\n",
@@ -54,33 +139,20 @@
     "\n",
     "    return compatible\n",
     "\n",
-    "## Interface\n",
-    "# plant_demo = gr.Interface(\n",
-    "#     fn=get_compatible_plants, \n",
-    "#     inputs=\"text\", \n",
-    "#     outputs=\"text\", \n",
-    "#     title=\"Companion Planting\", \n",
-    "#     description=\"Enter a plant name to see groups of plants which are compatible with it.\", \n",
-    "#     examples=[[example] for example in example_plants],\n",
-    "#     allow_flagging='never',\n",
-    "#     examples_per_page=len(example_plants),\n",
-    "# )\n",
-    "\n",
-    "#Blocks Interface (more customization)\n",
-    "with gr.Blocks(title=\"Companion Planting\") as plant_demo:\n",
+    "#Blocks Interface (Black theme to prevent eye burnout)\n",
+    "with gr.Blocks(title=\"Companion Planting\", theme=\"black\") as plant_demo:\n",
     "    with gr.Row():\n",
     "        with gr.Column():\n",
     "            plant_name = gr.Textbox(label=\"Plant Name\")\n",
     "            input_btn = gr.Button(label=\"Get Compatible Plants\")\n",
     "        with gr.Column():\n",
-    "            output = gr.Textbox(label=\"Compatible Plants\")\n",
+    "            output = gr.Textbox(label=\"Compatible Plant Groups\")\n",
     "\n",
     "    input_btn.click(get_compatible_plants, plant_name, outputs=output)\n",
     "    examples = gr.Examples(examples=[[example] for example in example_plants], label=\"Examples\", inputs=plant_name, examples_per_page=len(example_plants))\n",
     "\n",
-    "# Tabbed Interface\n",
     "\n",
-    "            \n",
+    "\n",
     "\n",
     "plant_demo.launch(share=False, inbrowser=True, inline=False)"
    ]
@@ -102,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.6"
   },
   "orig_nbformat": 4
  },
